force-app/main/default/objects/Search_request__c/Search_request__c.object-meta.xml
<CustomObject>
    <label>Search request</label>
    <nameField>
        <label>Search request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>