force-app/main/default/objects/Search_request__c/fields/Fibonacci_Above__c.field-meta.xml
<CustomField>
    <fullName>Fibonacci_Above__c</fullName>
    <label>Fibonacci Above</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>