force-app/main/default/objects/Search_request__c/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <label>Hash code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>