force-app/main/default/objects/Search_request__c/fields/Numeric_value__c.field-meta.xml
<CustomField>
    <fullName>Numeric_value__c</fullName>
    <label>Numeric value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>